adding text-font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/shared.css" />
     <title>Travel Page</title>
   </head>
@@ -15,19 +21,19 @@
       </nav>
     </header>
     <main>
-        <section id="main-content">
-            <div>
-                <h1>Travel Page</h1>
-                <p>Life is an experience. Why not enriching it </p>
-                <a href="" class="main-button">Destinations</a>
-            </div>
-        </section>
-        <section id="some-destinations">
-
-        </section>
-        <footer class="">
-
-        </footer>
+      <section id="main-content">
+        <div id="main-header">
+          <h1>Travel Page</h1>
+          <p>Life is an experience. Why not enriching it</p>
+          <a href="" class="main-button">Destinations</a>
+        </div>
+      </section>
+      <section id="some-destinations">
+        <div class="city"></div>
+        <div class="city"></div>
+        <div class="city"></div>
+      </section>
+      <footer class="social-media"></footer>
     </main>
   </body>
 </html>
