--- a/index.html
+++ b/index.html
@@ -9,31 +9,73 @@
       href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/styles/shared.css" />
+    <link rel="stylesheet" href="/styles/styles.css" />
     <title>Travel Page</title>
   </head>
   <body>
     <header>
-      <a href="/index.html" class="main-title">Travel Page</a>
-      <nav class="more-nav-options">
-        <a href="">Destination</a>
-        <a href="">About</a>
+      <div id="page-logo">
+        <a href="/index.html">Travel Goals</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/places.html">Destinations</a></li>
+          <li><a href="/about.html">About</a></li>
+          <!--Add an About page -->
+        </ul>
       </nav>
     </header>
     <main>
-      <section id="main-content">
-        <div id="main-header">
-          <h1>Travel Page</h1>
+      <section id="hero">
+        <!-- Hero-Image : is an image which captures all the attention -->
+        <div id="hero-content">
+          <h1>Joe's Travel Page</h1>
           <p>Life is an experience. Why not enriching it</p>
-          <a href="" class="main-button">Destinations</a>
+          <a href="/places.html">Discover places</a>
         </div>
       </section>
-      <section id="some-destinations">
-        <div class="city"></div>
-        <div class="city"></div>
-        <div class="city"></div>
+      <section id="highlights">
+        <h2>Highlights</h2>
+        <ul id="destinations">
+          <li class="destination">
+            <img src="/img/places/miami.jpg" alt="Miami streets on sunny day" />
+            <p>Miami <strong>USA</strong></p>
+          </li>
+          <li class="destination">
+            <img
+              src="/img/places/munich.jpg"
+              alt="Munich football stadium in winter"
+            />
+            <p>Munich <strong>Germany</strong></p>
+          </li>
+          <li class="destination">
+            <img
+              src="/img/places/barcelona.jpg"
+              alt="Palm beach in Barcelona"
+            />
+            <p>Barcelona <strong>Spain</strong></p>
+          </li>
+        </ul>
       </section>
-      <footer class="social-media"></footer>
     </main>
+    <footer>
+      <ul>
+        <li>
+          <a href="https://www.instagram.com/">
+            <img src="/img/icons/insta.png" alt="instagram-logo"
+          /></a>
+        </li>
+        <li>
+          <a href="https://www.facebook.com/">
+            <img src="/img/icons/facebook.png" alt="facebook" />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
