--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,8 +14,31 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="img/favicon/site.webmanifest" />
+    <!--My styles-->
+    <link rel="stylesheet" href="/styles/shared-normalize.css" />
     <link rel="stylesheet" href="/styles/shared.css" />
     <link rel="stylesheet" href="/styles/styles.css" />
+    <!-- JavaScript -->
+    <script src="js/index.js" defer></script>
     <title>Travel Page</title>
   </head>
   <body>
@@ -29,13 +53,37 @@
           <!--Add an About page -->
         </ul>
       </nav>
+      <a href="#side-drawer" class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </header>
+    <aside id="side-drawer">
+      <header>
+        <a href="#" class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </header>
+      <nav>
+        <ul>
+          <li>
+            <a href="/places.html">Destinations</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
     <main>
       <section id="hero">
         <!-- Hero-Image : is an image which captures all the attention -->
         <div id="hero-content">
-          <h1>Joe's Travel Page</h1>
-          <p>Life is an experience. Why not enriching it</p>
+          <h1>Travel Page</h1>
+          <p>Life is an experience | Why not enriching it</p>
           <a href="/places.html">Discover places</a>
         </div>
       </section>
@@ -43,22 +91,16 @@
         <h2>Highlights</h2>
         <ul id="destinations">
           <li class="destination">
-            <img src="/img/places/miami.jpg" alt="Miami streets on sunny day" />
-            <p>Miami <strong>USA</strong></p>
+            <img src="/img/places/madrid.webp" alt="Madrid views" />
+            <p>Madrid <strong>Spain</strong></p>
           </li>
           <li class="destination">
-            <img
-              src="/img/places/munich.jpg"
-              alt="Munich football stadium in winter"
-            />
-            <p>Munich <strong>Germany</strong></p>
+            <img src="/img/places/izmir.jpeg" alt="Izmir Clock Tower " />
+            <p>Izmir <strong>Turkey</strong></p>
           </li>
           <li class="destination">
-            <img
-              src="/img/places/barcelona.jpg"
-              alt="Palm beach in Barcelona"
-            />
-            <p>Barcelona <strong>Spain</strong></p>
+            <img src="/img/places/tokyo.jpg" alt="City views of Japan" />
+            <p>Tokyo <strong>Japan</strong></p>
           </li>
         </ul>
       </section>
