--- a/places.html
+++ b/places.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,10 +15,32 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="img/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="img/favicon/site.webmanifest" />
+    <!--My styles-->
+    <link rel="stylesheet" href="/styles/shared-normalize.css" />
     <link rel="stylesheet" href="styles/shared.css" />
     <link rel="stylesheet" href="styles/places.css" />
     <title>Travel Goals</title>
   </head>
+
   <body>
     <header>
       <div id="page-logo">
@@ -30,99 +53,101 @@
           <!--Add an About page -->
         </ul>
       </nav>
+      <a href="#side-drawer" class="menu-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
     </header>
+    <aside id="side-drawer">
+      <header>
+        <a href="#" class="menu-btn">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </header>
+      <nav>
+        <ul>
+          <li>
+            <a href="/places.html">Destinations</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
     <main>
       <ul>
         <li>
-          <img src="/img/places/barcelona.jpg" alt="City of Barcelona" />
+          <img src="/img/places/izmir.jpeg" alt="City of Izmir" />
           <div class="item-content">
             <div>
-              <h2>Barcelona</h2>
+              <h2>Izmir</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                Turkey’s third-largest city, <strong>Izmir</strong> combines
+                <em>modern energy</em> with a <strong>rich history</strong>. Its
+                <strong>palm-lined boulevards</strong>, <em>ancient ruins</em>,
+                and proximity to <strong>Ephesus</strong> make it a unique stop,
+                offering vibrant culture, historic sites, and Aegean charm.
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Barcelona"
+              <a href="/izmir.html">Explore &#x2192;</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/img/places/bilbao.webp" alt="City of Bilbao" />
+          <div class="item-content">
+            <div>
+              <h2>Bilbao</h2>
+              <p>
+                Located in northern Spain, <strong>Bilbao</strong> is a city
+                where <em>modern architecture</em> meets
+                <strong>rich Basque culture</strong>. Known for the iconic
+                <strong>Guggenheim Museum</strong>, its
+                <em>charming old town</em>, and vibrant culinary scene, Bilbao
+                offers a unique blend of tradition and innovation.
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/Bilbao"
                 >Explore &#x2192;</a
               >
             </div>
           </div>
         </li>
         <li>
-          <img src="/img/places/hawaii.jpg" alt="Hawaii beach" />
+          <img src="/img/places/madrid.webp" alt="city of Madrid" />
           <div class="item-content">
             <div>
-              <h2>Hawaii</h2>
+              <h2>Madrid</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                The capital of Spain, <strong>Madrid</strong> is a vibrant city
+                where <em>history</em> and <em>modernity</em> come together.
+                Renowned for its world-class museums like the
+                <strong>Prado</strong> and <strong>Reina Sofia</strong>, Madrid
+                is a cultural hub with masterpieces by artists such as Velázquez
+                and Picasso. The city's <strong>historic neighborhoods</strong>,
+                such as <em>La Latina</em> and <em>Malasaña</em>, are full of
+                lively plazas, traditional tapas bars, and vibrant nightlife.
+              </p>
+
+              <p>
+                Madrid is also famous for its
+                <strong>beautiful parks</strong> like <em>Retiro Park</em>,
+                where you can relax and enjoy the surroundings. The city's
+                <strong>delicious cuisine</strong>, including
+                <em>jamón ibérico</em> and <strong>cocido madrileño</strong>,
+                adds to its charm. As Spain’s political and cultural center,
+                Madrid offers a dynamic and welcoming atmosphere that makes it a
+                must-visit destination.
               </p>
             </div>
             <div class="actions">
-              <a href="hhttps://en.wikipedia.org/wiki/Hawaii"
-                >Explore &#x2192;</a
-              >
-            </div>
-          </div>
-        </li>
-        <li>
-          <img src="/img/places/london.jpg" alt="London city" />
-          <div class="item-content">
-            <div>
-              <h2>London</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Expedita architecto, doloribus ducimus itaque ex explicabo
-                facere voluptatibus at, inventore esse et, animi dolore rerum.
-                Excepturi laudantium distinctio sapiente? Velit, tenetur.
-              </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-                sit deserunt maxime, iusto reprehenderit ea delectus placeat
-                incidunt adipisci et fuga eligendi harum dolorem pariatur.
-                Tempora, doloremque magni? Sit, atque!
-              </p>
-            </div>
-            <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/London"
-                >Explore &#x2192;</a
-              >
-            </div>
-          </div>
-        </li>
-        <li>
-          <img src="/img/places/miami.jpg" alt="Miami streets" />
-          <div class="item-content">
-            <div>
-              <h2>Miami</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
-              </p>
-            </div>
-            <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Miami">Explore &#x2192;</a>
-            </div>
-          </div>
-        </li>
-        <li>
-          <img src="/img/places/munich.jpg" alt="Munich football stadium" />
-          <div class="item-content">
-            <div>
-              <h2>Munich</h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
-              </p>
-            </div>
-            <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Munich"
+              <a href="https://en.wikipedia.org/wiki/Madrid"
                 >Explore &#x2192;</a
               >
             </div>
@@ -130,19 +155,69 @@
         </li>
         <li>
           <img
-            src="/img/places/new-york-city.jpg"
-            alt="New York City skyline"
+            src="/img/places/montpellier-place-comedie.jpg"
+            alt="montpellier place de comedie"
           />
           <div class="item-content">
             <div>
-              <h2>New York City</h2>
+              <h2>Montpellier</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                Located in southern France, <strong>Montpellier</strong> is
+                known for its <em>historic architecture</em> and vibrant
+                <strong>student culture</strong>. Key landmarks include the
+                <strong>Place de la Comédie</strong> and the
+                <em>Fabre Museum</em>. With a blend of Mediterranean charm and
+                modern vibrancy, Montpellier offers a dynamic cultural
+                experience.
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/New_York_City"
+              <a href="https://en.wikipedia.org/wiki/Montpellier"
+                >Explore &#x2192;</a
+              >
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/img/places/mugla.jpg" alt="Muğla landscape" />
+          <div class="item-content">
+            <div>
+              <h2>Muğla</h2>
+              <p>
+                In southwestern Turkey, <strong>Muğla</strong> is famous for its
+                stunning <em>Turquoise Coast</em> and picturesque villages.
+                Known for <strong>Bodrum</strong>, <strong>Marmaris</strong>,
+                and <strong>Fethiye</strong>, the region offers beautiful
+                beaches, ancient ruins, and vibrant nightlife. With a relaxed
+                atmosphere and rich history, Muğla is a perfect destination for
+                both relaxation and adventure.
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/Muğla">Explore &#x2192;</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img
+            src="/img/places/san-sebastian.jpg"
+            alt="Beach of San-Sebastian"
+          />
+          <div class="item-content">
+            <div>
+              <h2>San Sebastián</h2>
+              <p>
+                Located in Spain's Basque Country,
+                <strong>San Sebastián</strong> is known for its stunning
+                <strong>La Concha Beach</strong> and
+                <strong>world-class pintxos</strong>. The charming
+                <em>old town</em> and scenic views from
+                <strong>Monte Igueldo</strong> make it a top destination for
+                both food lovers and beachgoers.
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/San_Sebastian"
                 >Explore &#x2192;</a
               >
             </div>
@@ -154,8 +229,13 @@
             <div>
               <h2>Paris</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                The capital of France, <strong>Paris</strong> is famous for its
+                iconic landmarks like the <strong>Eiffel Tower</strong>,
+                <strong>Louvre Museum</strong>, and
+                <strong>Notre-Dame Cathedral</strong>. Known as the "City of
+                Light," Paris offers a blend of <em>historic charm</em>,
+                <strong>art</strong>, and world-class cuisine, making it a top
+                destination for culture and style.
               </p>
             </div>
             <div class="actions">
@@ -164,17 +244,35 @@
           </div>
         </li>
         <li>
-          <img src="/img/places/sydney.jpg" alt="Sydney beach" />
+          <img src="/img/places/istanbul.webp" alt="Istanbul Bosphorus" />
           <div class="item-content">
             <div>
-              <h2>Sydney</h2>
+              <h2>Istanbul</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                Turkey’s largest city, <strong>Istanbul</strong> straddles both
+                Europe and Asia, blending rich <em>history</em> and
+                <em>culture</em>. Known for iconic landmarks like the
+                <strong>Hagia Sophia</strong>, <strong>Blue Mosque</strong>, and
+                <strong>Topkapi Palace</strong>, Istanbul reflects its past as
+                the capital of the Byzantine and Ottoman empires. The bustling
+                <em>Grand Bazaar</em> and <strong>Spice Bazaar</strong> offer a
+                taste of the city’s vibrant market culture.
+              </p>
+
+              <p>
+                Istanbul’s neighborhoods, such as <strong>Beyoğlu</strong> and
+                <strong>Karaköy</strong>, are filled with trendy cafes,
+                galleries, and lively streets. The city’s
+                <strong>food scene</strong> offers everything from street food
+                like <em>simit</em> and <em>kebabs</em> to gourmet dining
+                experiences. With stunning views along the
+                <strong>Bosphorus</strong> and a unique blend of Eastern and
+                Western influences, Istanbul is a city where the old and new
+                come together beautifully.
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Sydney"
+              <a href="https://en.wikipedia.org/wiki/Istanbul"
                 >Explore &#x2192;</a
               >
             </div>
@@ -186,8 +284,13 @@
             <div>
               <h2>Tokyo</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                Japan’s capital, <strong>Tokyo</strong> is a bustling metropolis
+                known for its <strong>modern architecture</strong>,
+                <em>ancient temples</em>, and
+                <strong>innovative cuisine</strong>. From the famous
+                <strong>Shibuya Crossing</strong> to serene spots like
+                <em>Senso-ji Temple</em>, Tokyo offers a mix of traditional and
+                futuristic experiences.
               </p>
             </div>
             <div class="actions">
@@ -201,12 +304,57 @@
             <div>
               <h2>Bali</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore
-                vitae incidunt eos atque dicta natus quam accusantium placeat.
+                An Indonesian island, <strong>Bali</strong> is famous for its
+                stunning <strong>beaches</strong>, lush <em>rice terraces</em>,
+                and vibrant <strong>Hindu culture</strong>. Known for temples
+                like <strong>Uluwatu</strong> and serene spots like
+                <strong>Ubud</strong>, Bali offers a mix of natural beauty,
+                spiritual atmosphere, and world-class resorts.
               </p>
             </div>
             <div class="actions">
               <a href="https://en.wikipedia.org/wiki/Bali">Explore &#x2192;</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/img/places/vichy.jpg" alt="Vichy landscape" />
+          <div class="item-content">
+            <div>
+              <h2>Vichy</h2>
+              <p>
+                Located in central France, <strong>Vichy</strong> is known for
+                its <em>therapeutic spas</em> and
+                <strong>elegant Belle Époque architecture</strong>. Famous for
+                its natural mineral waters, the city offers a relaxing
+                atmosphere with beautiful parks, historic landmarks, and a
+                tranquil riverside setting, making it a popular wellness
+                destination.
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/Vichy">Explore &#x2192;</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="/img/places/marseille.jpg" alt="Marseille views" />
+          <div class="item-content">
+            <div>
+              <h2>Marseille</h2>
+              <p>
+                France’s oldest city, <strong>Marseille</strong> is a lively
+                Mediterranean port known for its historic <em>Old Port</em>, the
+                iconic <strong>Notre-Dame de la Garde</strong>, and fresh
+                <strong>seafood cuisine</strong>. With a blend of French and
+                Mediterranean influences, Marseille offers coastal charm and
+                rich cultural diversity.
+              </p>
+            </div>
+            <div class="actions">
+              <a href="https://en.wikipedia.org/wiki/Marseille"
+                >Explore &#x2192;</a
+              >
             </div>
           </div>
         </li>
