--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="/styles/shared.css" />
     <link rel="stylesheet" href="/styles/styles.css" />
     <!-- JavaScript -->
-    <script src="js/index.js" defer></script>
+    <script src="js/shared.js" defer></script>
     <title>Travel Page</title>
   </head>
   <body>
