--- a/places.html
+++ b/places.html
@@ -135,7 +135,7 @@
                 lively plazas, traditional tapas bars, and vibrant nightlife.
               </p>
 
-              <p>
+              <p class="second-paragraph">
                 Madrid is also famous for its
                 <strong>beautiful parks</strong> like <em>Retiro Park</em>,
                 where you can relax and enjoy the surroundings. The city's
@@ -259,7 +259,7 @@
                 taste of the city’s vibrant market culture.
               </p>
 
-              <p>
+              <p class="second-paragraph">
                 Istanbul’s neighborhoods, such as <strong>Beyoğlu</strong> and
                 <strong>Karaköy</strong>, are filled with trendy cafes,
                 galleries, and lively streets. The city’s
