--- a/Web/www/login.html
+++ b/Web/www/login.html
@@ -50,8 +50,8 @@
       <nav>
         <ul>
           <li><a href="/places.html">Destinations</a></li>
-          <li><a href="/about.html">About</a></li>
-          <!--Add an About page -->
+          <li><a href="/login.html">Login</a></li>
+          <li><a href="/chatbox.html">Forum</a></li>
         </ul>
       </nav>
       <a href="#side-drawer" class="menu-btn">
@@ -75,7 +75,10 @@
             <a href="/places.html">Destinations</a>
           </li>
           <li>
-            <a href="">About</a>
+            <a href="/login.html">Login</a>
+          </li>
+          <li>
+            <a href="/chatbox.html">Forum</a>
           </li>
         </ul>
       </nav>
@@ -122,6 +125,11 @@
         <section class="form-buttons">
           <button>Login</button>
           <button type="reset">Clear</button>
+        </section>
+        <section>
+          <p id="registerParagraph">
+            If you don't have an account <a href="/register.html">Register</a>
+          </p>
         </section>
       </form>
 
