--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -49,8 +49,8 @@
       <nav>
         <ul>
           <li><a href="/places.html">Destinations</a></li>
-          <li><a href="/about.html">About</a></li>
-          <!--Add an About page -->
+          <li><a href="/login.html">Login</a></li>
+          <li><a href="/chatbox.html">Forum</a></li>
         </ul>
       </nav>
       <a href="#side-drawer" class="menu-btn">
@@ -73,7 +73,10 @@
             <a href="/places.html">Destinations</a>
           </li>
           <li>
-            <a href="">About</a>
+            <a href="/login.html">Login</a>
+          </li>
+          <li>
+            <a href="/chatbox.html">Forum</a>
           </li>
         </ul>
       </nav>
