--- a/Web/www/register.html
+++ b/Web/www/register.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="/styles/shared-normalize.css" />
     <link rel="stylesheet" href="/styles/shared.css" />
     <link rel="stylesheet" href="/styles/forms/forms-shared.css" />
+    <link rel="stylesheet" href="/styles/forms/register.css" />
     <!-- JavaScript -->
     <script src="js/forms/register.js" defer></script>
     <title>Travel Page</title>
@@ -49,8 +50,8 @@
       <nav>
         <ul>
           <li><a href="/places.html">Destinations</a></li>
-          <li><a href="/about.html">About</a></li>
-          <!--Add an About page -->
+          <li><a href="/login.html">Login</a></li>
+          <li><a href="/chatbox.html">Forum</a></li>
         </ul>
       </nav>
       <a href="#side-drawer" class="menu-btn">
@@ -73,7 +74,10 @@
             <a href="/places.html">Destinations</a>
           </li>
           <li>
-            <a href="">About</a>
+            <a href="/login.html">Login</a>
+          </li>
+          <li>
+            <a href="/chatbox.html">Forum</a>
           </li>
         </ul>
       </nav>
