added some logs

--- a/Web/www/login.html
+++ b/Web/www/login.html
@@ -134,7 +134,7 @@
       </form>
 
       <section id="login-responce">
-        <div id="message-area"></div>
+        <p id="message-area"></p>
       </section>
     </main>
     <footer>
