facebook logo tag is changed

--- a/Web/www/index.html
+++ b/Web/www/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="/styles/shared.css" />
     <link rel="stylesheet" href="/styles/styles.css" />
     <!-- JavaScript -->
-    <script src="js/shared.js" defer></script>
+    <script src="js/index.js" defer></script>
     <title>Travel Page</title>
   </head>
   <body>
@@ -110,7 +110,9 @@
           </li>
           <li class="destination">
             <img src="/img/places/izmir.jpeg" alt="Izmir Clock Tower " />
-            <p>Izmir <strong>Turkey</strong></p>
+            <a href="/izmir.html"
+              ><p>Izmir <strong>Turkey</strong></p></a
+            >
           </li>
           <li class="destination">
             <img src="/img/places/tokyo.jpg" alt="City views of Japan" />
@@ -128,7 +130,7 @@
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook" />
+            <img src="/img/icons/facebook.png" alt="facebook-logo" />
           </a>
         </li>
       </ul>
