--- a/Web/www/izmir.html
+++ b/Web/www/izmir.html
@@ -39,8 +39,7 @@
     <link rel="stylesheet" href="/styles/cities/cities-shared.css" />
     <link rel="stylesheet" href="/styles/cities/izmir.css" />
     <!-- JavaScript -->
-    <script src="js/shared.js" defer></script>
-    <script src="js/izmir.js" defer></script>
+    <script src="js/cities-shared.js" defer></script>
 
     <title>Travel Page</title>
   </head>
@@ -622,7 +621,7 @@
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook" />
+            <img src="/img/icons/facebook.png" alt="facebook-logo" />
           </a>
         </li>
       </ul>
