--- a/Web/www/places.html
+++ b/Web/www/places.html
@@ -35,7 +35,7 @@
     />
     <link rel="manifest" href="img/favicon/site.webmanifest" />
     <!--My styles-->
-    <link rel="stylesheet" href="/styles/shared-normalize.css" />
+    <link rel="stylesheet" href="styles/shared-normalize.css" />
     <link rel="stylesheet" href="styles/shared.css" />
     <link rel="stylesheet" href="styles/places.css" />
     <title>Travel Goals</title>
@@ -127,7 +127,7 @@
               </p>
             </div>
             <div class="actions">
-              <a href="https://en.wikipedia.org/wiki/Bilbao"
+              <a href="/bilbao.html"
                 >Explore &#x2192;</a
               >
             </div>
@@ -383,7 +383,7 @@
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook " />
+            <img src="/img/icons/facebook.png" alt="facebook-logo " />
           </a>
         </li>
       </ul>
