--- a/Web/www/chatbox.html
+++ b/Web/www/chatbox.html
@@ -143,7 +143,7 @@
         </li>
         <li>
           <a href="https://www.facebook.com/">
-            <img src="/img/icons/facebook.png" alt="facebook" />
+            <img src="/img/icons/facebook.png" alt="facebook-logo" />
           </a>
         </li>
       </ul>
