made the css and js paths absolute

--- a/Web/www/bilbao.html
+++ b/Web/www/bilbao.html
@@ -34,13 +34,13 @@
     />
     <link rel="manifest" href="img/favicon/site.webmanifest" />
     <!--My styles-->
-    <link rel="stylesheet" href="styles/shared-normalize.css" />
-    <link rel="stylesheet" href="styles/shared.css" />
-    <link rel="stylesheet" href="styles/cities/cities-shared.css" />
-    <link rel="stylesheet" href="styles/cities/bilbao.css" />
+    <link rel="stylesheet" href="/styles/shared-normalize.css" />
+    <link rel="stylesheet" href="/styles/shared.css" />
+    <link rel="stylesheet" href="/styles/cities/cities-shared.css" />
+    <link rel="stylesheet" href="/styles/cities/bilbao.css" />
     <!-- JavaScript -->
-    <script src="js/shared.js" defer></script>
-    <script src="js/cities-shared.js" defer></script>
+    <script src="/js/shared.js" defer></script>
+    <script src="/js/cities-shared.js" defer></script>
 
     <title>Travel Page</title>
   </head>
