--- a/Web/www/izmir.html
+++ b/Web/www/izmir.html
@@ -39,7 +39,7 @@
     <link rel="stylesheet" href="/styles/cities/cities-shared.css" />
     <link rel="stylesheet" href="/styles/cities/izmir.css" />
     <!-- JavaScript -->
-    <script src="js/cities-shared.js" defer></script>
+    <script src="/js/cities-shared.js" defer></script>
 
     <title>Travel Page</title>
   </head>
