added hyperlines and images which open with click

--- a/Web/www/bilbao.html
+++ b/Web/www/bilbao.html
@@ -116,8 +116,13 @@
           <p>
             Welcome to <strong>Bilbao</strong>, a vibrant city in northern
             Spain, where <em>art</em> and <em>culture</em> come alive to create
-            an extraordinary journey. Known as the heart of the Basque Country,
-            Bilbao offers visitors an unforgettable blend of
+            an extraordinary journey. Known as the heart of the
+            <span
+              class="fullscreen-img"
+              data-img-src="img/places/bilbao/basque-region.png"
+            >
+              <strong> Basque Country</strong> </span
+            >, Bilbao offers visitors an unforgettable blend of
             <strong>modern architecture</strong>,
             <strong>rich traditions</strong>, exquisite cuisine, and a lively
             atmosphere. From the iconic
@@ -138,8 +143,8 @@
           <p>
             Whether you're here for a <strong>culinary adventure</strong>, an
             <strong>inspiring journey</strong> through contemporary art, or a
-            <strong>relaxing escape</strong> into the green hills and
-            riverfronts, Bilbao has something for everyone. Get ready to immerse
+            <strong>relaxing escape</strong> into the green hills and river
+            fronts, Bilbao has something for everyone. Get ready to immerse
             yourself in a city where <em>tradition meets modernity</em>, all set
             against the stunning backdrop of the
             <strong>Basque landscape</strong>.
@@ -160,24 +165,30 @@
             <div class="item-content">
               <h2>San Anton Bridge: An Icon of Bilbao</h2>
               <p>
-                The
-                <span
+                The <strong>San Anton Bridge</strong> , gracefully spanning
+                the<span
                   class="fullscreen-img"
-                  data-img-src="img/places/bilbao/san-anton-bridge2.jpg"
+                  data-img-src="img/places/bilbao/nervion-river.jpg"
                 >
-                  <strong>San Anton Bridge</strong> </span
-                >, gracefully spanning the <strong>Nervión River</strong>, is a
-                symbol of Bilbao's historic and cultural identity. Built in the
-                medieval era, this iconic structure has served as a crucial
-                connection for trade and travel, linking the city's bustling
-                markets and neighborhoods. Its enduring presence is so
+                  <strong>Nervión River</strong>
+                </span>
+                , is a symbol of Bilbao's historic and cultural identity. Built
+                in the medieval era, this iconic structure has served as a
+                crucial connection for trade and travel, linking the city's
+                bustling markets and neighborhoods. Its enduring presence is so
                 significant that it is proudly featured on Bilbao's
                 <strong>coat of arms</strong>, embodying centuries of resilience
                 and community spirit.
               </p>
               <p>
-                Crossing the <strong>San Anton Bridge</strong> offers
-                breathtaking views of Bilbao's charming
+                Crossing the
+                <span
+                  class="fullscreen-img"
+                  data-img-src="img/places/bilbao/san-anton-bridge2.jpg"
+                >
+                  <strong>San Anton Bridge</strong>
+                </span>
+                offers breathtaking views of Bilbao's charming
                 <strong>Casco Viejo</strong> (Old Town), where narrow streets
                 meet vibrant architecture. Whether a history enthusiast or a
                 casual traveler, this bridge invites you to immerse yourself in
@@ -201,12 +212,14 @@
                 Perched on a hill that offers a stunning view of Bilbao, the
                 <span
                   class="fullscreen-img"
-                  data-img-src="img/places/bilbao/begona-basilica-inside.jpeg"
+                  data-img-src="img/places/bilbao/begona-basilica3.jpg"
                   ><strong>Begona Basilica</strong></span
                 >
-                is a revered pilgrimage site. Dedicated to the Virgin of Begona,
-                the patron saint of Biscay, it holds deep spiritual significance
-                for locals and visitors alike.
+                is a revered pilgrimage site. Dedicated to the
+                <a href="https://en.wikipedia.org/wiki/Our_Lady_of_Bego%C3%B1a"
+                  >Virgin of Begona</a
+                >, the patron saint of Biscay, it holds deep spiritual
+                significance for locals and visitors alike.
               </p>
               <p>
                 The basilica's
@@ -239,8 +252,11 @@
                 >
                 is a lively and vibrant square located in the heart of Bilbao’s
                 <strong>Casco Viejo</strong>. It is named after the renowned
-                philosopher <strong>Miguel de Unamuno</strong>, whose
-                intellectual legacy deeply influenced the city and its people.
+                philosopher
+                <a href="https://en.wikipedia.org/wiki/Miguel_de_Unamuno"
+                  ><strong>Miguel de Unamuno</strong></a
+                >, whose intellectual legacy deeply influenced the city and its
+                people.
               </p>
               <p>
                 Surrounded by charming shops and cozy cafés, the plaza is a
@@ -280,10 +296,25 @@
                 Surrounded by traditional taverns and
                 <strong>pintxo</strong> bars, Plaza Berria is an ideal place to
                 relax and savor local delicacies such as
-                <strong>bacalao a la vizcaína</strong> (cod in Vizcayan sauce),
-                <strong>chistorra</strong> (a type of sausage), and
-                <strong>tortilla de bacalao</strong> (salted cod omelette).
-                Whether you're enjoying a drink or sampl
+                <span
+                  class="fullscreen-img"
+                  data-img-src="img/places/bilbao/bacalao-a-la-vizcaina.webp"
+                  ><strong>bacalao a la vizcaína</strong></span
+                >
+                (cod in Vizcayan sauce),
+                <span
+                  class="fullscreen-img"
+                  data-img-src="img/places/bilbao/chistorra.jpg"
+                  ><strong>chistorra</strong></span
+                >
+
+                (a type of sausage), and
+                <span
+                  class="fullscreen-img"
+                  data-img-src="img/places/bilbao/tortilla-de-bacalao.jpg"
+                  ><strong>tortilla de bacalao</strong></span
+                >
+                (salted cod omelette). Whether you're enjoying a drink or sampl
               </p>
             </div>
           </li>
@@ -316,11 +347,17 @@
               </p>
               <p>
                 Named after the Basque composer
-                <strong>Juan Crisóstomo Arriaga</strong>, often referred to as
-                the "Spanish Mozart," the theatre stands as a tribute to his
-                legacy. It is an essential destination for those passionate
-                about the <strong>performing arts</strong> and offers a glimpse
-                into the rich cultural heritage of Bilbao.
+                <span
+                  class="fullscreen-img"
+                  data-img-src="img/places/bilbao/juan-crisostomo-arriaga.jpg"
+                  ><strong>Juan Crisóstomo Arriaga</strong></span
+                >, often referred to as the "<a
+                  href="https://en.wikipedia.org/wiki/Juan_Cris%C3%B3stomo_Arriaga"
+                  >Spanish Mozart</a
+                >," the theatre stands as a tribute to his legacy. It is an
+                essential destination for those passionate about the
+                <strong>performing arts</strong> and offers a glimpse into the
+                rich cultural heritage of Bilbao.
               </p>
             </div>
           </li>
@@ -442,10 +479,16 @@
                   class="fullscreen-img"
                   data-img-src="img/places/bilbao/san-juan-de-gaztelugatxe5.jpg"
                   ><strong>San Juan de Gaztelugatxe</strong></span
-                >, famously featured in <em>Game of Thrones</em> and <em>House Of The Dragons</em>, is a dramatic
-                island located off the Biscay coast. A church sits atop the
-                island, perched on rugged cliffs and surrounded by the stunning
-                beauty of the sea.
+                >, famously featured in
+                <a href="https://www.youtube.com/watch?v=KPLWWIOCOOQ"
+                  ><em>Game of Thrones</em></a
+                >
+                and
+                <a href="https://www.youtube.com/watch?v=DotnJ7tTA34"
+                  ><em>House Of The Dragons</em></a
+                >, is a dramatic island located off the Biscay coast. A church
+                sits atop the island, perched on rugged cliffs and surrounded by
+                the stunning beauty of the sea.
               </p>
               <p>
                 Accessible by a winding stone staircase, the journey to the
